Feat: Modificaciones generales, cambio de titulo

--- a/index.html
+++ b/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Creative UI & Effect Back To Top Button</title>
+    <title>Creative UI | Back To Top Button Effect</title>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.14.0/css/all.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
+
 <body>
     <main>
         <section class="section">
-            <h2>SECTION 1</h2> 
+            <h2>SECTION 1</h2>
         </section>
         <section class="section">
-            <h2>SECTION 2</h2> 
+            <h2>SECTION 2</h2>
         </section>
         <section class="section">
             <h2>SECTION 3</h2>
         </section>
         <section class="section">
-            <h2>SECTION 4</h2> 
+            <h2>SECTION 4</h2>
         </section>
         <section class="section">
             <h2>SECTION 5</h2>
@@ -30,4 +32,5 @@
     </main>
     <script src="./js/main.js"></script>
 </body>
+
 </html>
